test-ui/ui/ns_string_not_const.stderr
error[E0435]: attempt to use a non-constant value in a constant
 --> ui/ns_string_not_const.rs
  |
  |     let _ = ns_string!(s);
  |             -----------^-
  |             |          |
  |             |          non-constant value
  |             help: consider using `let` instead of `const`: `let INPUT`

error[E0080]: evaluation of constant value failed
 --> ui/ns_string_not_const.rs
  |
  |     let _ = ns_string!(s);
  |             ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> ui/ns_string_not_const.rs
  |
  |     let _ = ns_string!(s);
  |             ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0080]: evaluation of constant value failed
 --> ui/ns_string_not_const.rs
  |
  |     let _ = ns_string!(s);
  |             ^^^^^^^^^^^^^ referenced constant has errors
  |
  = note: this error originates in the macro `ns_string` (in Nightly builds, run with -Z macro-backtrace for more info)
